[gd_scene load_steps=3 format=3 uid="uid://rxjhjaphbkps"]

[ext_resource type="Script" uid="uid://pb2j5k4qucj4" path="res://src/ui/bedroom/bedroom_lock.gd" id="1_ujuyf"]
[ext_resource type="PackedScene" uid="uid://bnl1vwjp1jfxc" path="res://src/ui/bedroom/lock_button.tscn" id="2_gjvml"]

[node name="BedroomLock" type="Control"]
layout_mode = 3
anchor_right = 0.25
anchor_bottom = 0.25
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ujuyf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223103, 0.223103, 0.223103, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.5
offset_top = -25.5
offset_right = 75.5
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2

[node name="LockButton" parent="HBoxContainer" instance=ExtResource("2_gjvml")]
layout_mode = 2
size_flags_horizontal = 3

[node name="LockButton2" parent="HBoxContainer" instance=ExtResource("2_gjvml")]
layout_mode = 2
size_flags_horizontal = 3

[node name="LockButton3" parent="HBoxContainer" instance=ExtResource("2_gjvml")]
layout_mode = 2
size_flags_horizontal = 3

[node name="LockButton4" parent="HBoxContainer" instance=ExtResource("2_gjvml")]
layout_mode = 2
size_flags_horizontal = 3

[node name="LockButton5" parent="HBoxContainer" instance=ExtResource("2_gjvml")]
layout_mode = 2
size_flags_horizontal = 3

[node name="submit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -55.0
offset_right = 37.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
text = "Confirm"

[node name="status_overlay" type="ColorRect" parent="."]
modulate = Color(1, 0, 0, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
